--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -4,6 +4,9 @@
     flex-direction: column;
     text-align: left;
     width: 100%;
+    height: 100%;
+    overflow: hidden;
+    cursor: pointer;
 }
 
 .tabs {
