--- a/src/components/burger-ingredients/burger-item/burger-item.module.css
+++ b/src/components/burger-ingredients/burger-item/burger-item.module.css
@@ -6,7 +6,7 @@
     justify-content: flex-start;
     align-content: center;
     text-align: center;
-    width: 45%;
+    /*width: 45%;*/
     position: relative;
 }
 
@@ -27,4 +27,13 @@
 .itemName {
     height: 48px;
     /*border: 1px dashed #4C4CFF;*/
+}
+
+.link{
+    width: 49%;
+    margin:0;
+    padding:0;
+    border:0;
+    text-decoration: none;
+    color: var(--text-primary-color);
 }
